# flora

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: flora-core-tests.yml  flora-worker-tests.yml
alembic/: env.py
alembic/versions/: 0001_bootstrap_mvp.py
apps/api/flora_api/: config.py  database.py  main.py
apps/web/: package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts
apps/worker/flora_worker/: main.py  polling.py
flora-core/: Dockerfile  alembic.ini  pyproject.toml
flora-core/alembic/: env.py
flora-core/alembic/versions/: 581e70c72c0c_create_sources_table.py  7c1d8f2e4b6a_create_document_tables.py  91a6d54b2c31_create_outbox_events_table.py  a4f2c8d9e1b0_remove_source_document_content_hash.py  cd8db0fcb7d7_add_unique_source_path.py  f09a7c3f5f47_require_source_path.py
flora-core/src/: config.py  database.py  main.py
flora-core/src/decorators/: __init__.py  logging_wrapper.py
flora-core/src/flora_core/: config.py  main.py
flora-core/src/models/: __init__.py  document_versions.py  documents.py  outbox_events.py  sources.py
flora-core/src/repositories/documents/: document_versions_repository.py  documents_repository.py
flora-core/src/repositories/outbox/: outbox_repository.py
flora-core/src/repositories/sources/: sources_repository.py
flora-core/src/routes/document_versions/: __init__.py  document_versions.py
flora-core/src/routes/source_documents/: __init__.py  source_documents.py
flora-core/src/routes/sources/: __init__.py  sources.py
flora-core/src/services/documents/: document_versions_service.py  documents_service.py
flora-core/src/services/outbox/: outbox_service.py
flora-core/src/services/sources/: sources_service.py
flora-core/src/utils/: time_utils.py
flora-core/tests/: conftest.py  test_config.py  test_document_models.py  test_document_versions.py  test_documents_repository.py  test_documents_service.py  test_health.py  test_outbox_models.py  test_outbox_service.py  test_source_documents.py  test_sources.py  test_sources_repository.py
flora-obsidian-connector/: manifest.json  tsconfig.json
flora-obsidian-connector/src/: api.ts  main.ts  settings.ts  sync.ts
flora-shared/: pyproject.toml
flora-shared/src/flora_shared/: __init__.py  document_events.py
flora-ui/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
flora-ui/app/: globals.css  layout.tsx  page.tsx
flora-ui/app/audit/: page.tsx
flora-ui/app/claims/: page.tsx
flora-ui/app/patches/: page.tsx
flora-ui/app/scans/: page.tsx
flora-ui/app/settings/: page.tsx
flora-ui/app/sources/: page.tsx
flora-ui/app/workers/: page.tsx
flora-ui/components/: ui.tsx
flora-ui/lib/: api.ts  format.ts  mock-data.ts
flora-worker/: Dockerfile  pyproject.toml
flora-worker/src/: __init__.py  config.py  database.py  embeddings.py  main.py  models.py  polling.py  vector_store.py
flora-worker/src/consumers/: source_document_consumer.py
flora-worker/src/embeddings/: base.py  factory.py  jina_provider.py  openai_provider.py
flora-worker/src/flora_worker/: config.py  database.py  embeddings.py  main.py  polling.py  vector_store.py
flora-worker/src/flora_worker/consumers/: source_document_consumer.py
flora-worker/src/flora_worker/publishers/: outbox_publisher.py  source_document_producer.py
flora-worker/src/publishers/: outbox_publisher.py  source_document_producer.py
flora-worker/src/repositories/outbox/: outbox_repository.py
flora-worker/tests/: conftest.py  test_config.py  test_consumer.py  test_main.py  test_outbox_publisher.py  test_vector_store.py  test_worker.py
openspec/: project.md
openspec/changes/bootstrap-flora-mvp/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-flora-skeleton/: design.md  proposal.md  tasks.md
tests/: conftest.py  test_api.py  test_local_markdown_connector.py  test_worker_flow.py
(+30 files in other folders)
