[project]
name = "flora"
version = "0.1.0"
description = "Agentic knowledge-maintenance system for living notes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pytest>=8.3.2",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6"
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["apps/api", "apps/worker", "packages/shared", "packages/core", "packages/connectors"]
include = ["flora_*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/api", "apps/worker", "packages/shared", "packages/core", "packages/connectors"]
