[project]
name = "flora-core"
version = "0.1.0"
description = "Flora core FastAPI service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pytest>=8.3.2",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.6"
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flora_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
