[project]
name = "flora-core"
version = "0.1.0"
description = "Flora core FastAPI service"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.3",
  "pytest>=8.3.2",
  "python-dotenv>=1.0.1",
  "ruff>=0.8.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.30.6",
  "alembic>=1.18.4",
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "database", "main"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["models*", "routes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
