[project]
name = "flora-shared"
version = "0.1.0"
description = "Shared Flora contracts"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.8.2",
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flora_shared*"]

[tool.ruff]
target-version = "py313"