[project]
name = "flora-worker"
version = "0.1.0"
description = "Flora background worker service"
requires-python = ">=3.14"
dependencies = [
  "aiosqlite>=0.22.1",
  "fastapi>=0.124.0",
  "flora-shared",
  "greenlet>=3.5.1",
  "kafka-python>=2.3.2",
  "openai>=1.0.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.3",
  "pytest>=8.3.2",
  "python-dotenv>=1.0.1",
  "qdrant-client>=1.18.0",
  "sqlalchemy>=2.0.36",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.6",
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.uv.sources]
flora-shared = { path = "../flora-shared", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
